# invoice-tracker

./: .gitignore  app.py  database.py  extractor.py  main.py  pyproject.toml
tests/: conftest.py  test_vat.py
