[project]
name = "invoice-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=12.2.0",
    "pydantic-ai>=1.106.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "supabase>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
